# prometheus-procspawn-collector

./: .clang-format  .clang-format-ignore  LICENCE  NEWS  NEWS.pending  README.asciidoc  meson.build
src/: alloc.h  config.h  error.c  error.h  label.c  label.h  label_test.c  main.c  nanotime.h  path.c  path.h  path_test.c  signal.c  signal.h  slice.h
